--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,22 @@
 ---
 
+import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header.astro';
+import Hero from '../components/Hero.astro';
+import FeaturedWork from '../components/FeaturedWork.astro';
+import ProcessSection from '../components/ProcessSection.astro';
+
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="Portfolio - Product Designer from Barcelona">
+  <div class="grid grid-cols-[200px_1fr] min-h-screen">
+    <aside>
+      <Header />
+    </aside>
+    <main class="p-8 w-full max-w-[1600px] mx-auto">
+      <Hero />
+      <FeaturedWork />
+     <!--  <ProcessSection /> -->
+    </main>
+  </div>
+</Layout>
