feat: Add new projects to the portfolio with updated descriptions and URLs

--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -68,6 +68,34 @@ const projects = [
     description: "Application for finding and managing jobs",
     url: "https://zeehire.com/",
   },
+  {
+    id: 10,
+    image: "https://tractodiesel.com.ec/images/logo-w.svg",
+    title: "Tracto Diesel",
+    description: "Landing page platform for auto parts",
+    url: "https://tractodiesel.com.ec",
+  },
+  {
+    id: 10,
+    image: "https://tractodiesel.com.ec/images/logo-w.svg",
+    title: "Tracto Diesel",
+    description: "E-commerce platform for auto parts",
+    url: "https://ecommerce.tractodiesel.com.ec",
+  },
+  {
+    id: 11,
+    image: "https://mdconsgroup.com/assets/images/logos/logo-white.png",
+    title: "Mdconsgroup",
+    description: "Landing page platform for medical software devices",
+    url: "https://mdconsgroup.com"
+  },
+  {
+    id: 12,
+    image: "https://app.labs.ec/dashboard/media/logos/isotype.svg",
+    title: "Labs",
+    description: "Application for ordering and managing laboratory tests",
+    url: "https://app.labs.ec/",
+  },
 ];
 ---
 
