--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css';
+import SidebarScript from '../components/SidebarScript.astro';
 export interface Props {
   title: string;
 }
@@ -21,4 +22,5 @@ const { title } = Astro.props;
   <body class="bg-black text-white font-sans min-h-screen overflow-x-hidden">
     <slot />
   </body>
+  <SidebarScript />
 </html>
